<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smart_imu</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kimjeongmin@todo.todo">kimjeongmin</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <!-- 아래 부분 외부 라이브러리에 필요한 의존성 -->
  <depend>requests</depend>
  <depend>numpy</depend>
  <depend>python3-scipy</depend>
  <depend>tf_transformations</depend> 


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>              <!-- 여기서부터 아래 3개 msg 의존성 -->
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>



  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
